// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders the component correctly 1`] = `
<button
  className="btn mg-button"
  id="test"
  name="Test"
  onClick={[Function]}
  type="submit"
>
  Default
</button>
`;

exports[`Button renders the component correctly 2`] = `
<button
  className="btn mg-button block"
  id="disabled-button"
  name="disabled-button"
  onClick={[Function]}
  type="submit"
>
  Disabled Block Level Button
</button>
`;
